turtleart.kerr40.Kerr40.scala.error
Compilation error:
Kerr40:13: error: not found: value doite
  doite(90)
  ^